--- a/WebTrivialWiki/app/styles/general.css
+++ b/WebTrivialWiki/app/styles/general.css
@@ -123,3 +123,7 @@
     background-position: center;
     background-attachment: fixed;
 }
+
+.md-tabs .md-tab.md-active {
+    color: black !important;
+}
