--- a/WebTrivialWiki/app/styles/header.css
+++ b/WebTrivialWiki/app/styles/header.css
@@ -277,4 +277,18 @@
     }
 }
 
+.admin-dropdown {
+    -ms-border-radius: 0 !important;
+    border-radius: 0 !important;
+}
 
+.admin-dropdown li {
+    display: block !important;
+    width: 100%;
+    margin: 0 !important;
+    padding: 5px !important;
+}
+
+.admin-dropdown li:hover {
+    background-color: #f5f5f5 !important;
+}
