--- a/WebTrivialWiki/app/styles/general.css
+++ b/WebTrivialWiki/app/styles/general.css
@@ -56,6 +56,14 @@
     color: #cc1935;
 }
 
+.black-color {
+    color: black;
+}
+
+.self-align {
+    align-self: center;
+}
+
 .center-modal {
     position: fixed;
     top:5%;
