--- a/WebTrivialWiki/app/views/somethingWrong.html
+++ b/WebTrivialWiki/app/views/somethingWrong.html
@@ -1,1 +1,10 @@
-﻿SOMETHING WRONG
+﻿<div layout="row">
+
+    <div flex="25">
+        [flex="20"]
+    </div>
+    <div flex="50">
+        [flex="70"]
+    </div>
+
+</div>
