--- a/WebTrivialWiki/app/styles/header.css
+++ b/WebTrivialWiki/app/styles/header.css
@@ -146,9 +146,9 @@
 }
 
 .notifications-dropdown {
-     right: 20px;
-    margin-top: -30px;
-    width: 360px;
+    right: 20px;
+    margin-top: -10px;
+    width: 390px;
     min-height: 40px;
     text-align: center;
     -ms-border-radius: 0;
@@ -158,6 +158,21 @@
     -ms-transition: all 0.3s;
     -o-transition: all 0.3s;
     transition: all 0.3s;
+}
+
+.notifications-dropdown::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3);
+    background-color: white;
+}
+
+.notifications-dropdown::-webkit-scrollbar {
+    width: 5px;
+}
+
+.notifications-dropdown::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+    -ms-border-radius: 4px;
+    border-radius: 4px;
 }
 
 .notifications-dropdown li,
@@ -349,13 +364,13 @@
     bottom: 7px;
 }
 
-notification-icon {
+.notification-icon {
     position: relative;
     bottom: 4px;
 }
 
 .notificationRow {
-    max-height: 60px;
+    max-height: 80px;
     width: 100%;
 }
 
@@ -366,14 +381,13 @@ notification-icon {
 }
 
     .notification-image img {
-        max-height: 50px;
-        max-width: 50px;
+        max-height: 70px;
+        max-width: 70px;
     }
 
 .notification-data {
     width: 70%; 
     float: left; 
-    align-self: center;
 }
 
 .notification-sender {
@@ -381,6 +395,7 @@ notification-icon {
     font-size: 13px; 
     font-weight: 400; 
     float: left;
+    clear: both;
 }
 
 .notification-text {
@@ -388,13 +403,18 @@ notification-icon {
     font-size: 11px; 
     font-weight: 300; 
     float: left;
+    clear: both;
 }
 
 .notification-date {
+    position: absolute;
+    bottom: 0;
+    left: 80px;
     margin-top: 0; 
     float: left; 
     font-size: 10px; 
     font-weight: 200;
+    clear: both;
 }
 
 .notification-cercle {
@@ -406,7 +426,7 @@ notification-icon {
 .small-circle {
     cursor: pointer;    
     font-size: 10px !important; 
-    top: 10px;
+    top: 20px;
 }
 
 .mark-read-tooltip {
