--- a/WebTrivialWiki/app/styles/trivia/generalTrivia.css
+++ b/WebTrivialWiki/app/styles/trivia/generalTrivia.css
@@ -37,3 +37,31 @@
     -ms-border-radius: 4px;
     border-radius: 4px;
 }
+
+.panel-shadow {
+    -webkit-box-shadow: 1px 1px 12px  rgba(0, 0, 0, 0.1);
+	-ms-box-shadow: 1px 1px 12px rgba(0, 0, 0, 0.1);
+	box-shadow: 1px 1px 12px rgba(0, 0, 0, 0.1);
+}
+
+.hvr-outline-out:before {
+    border: red solid 4px;
+}
+
+.public-table:before {
+    background-image: url(../../../images/universe.jpg);
+
+   -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+}
+
+.public-table {
+    width: 370px; 
+}
+
+.connectingTable-spinner {
+    
+}
