--- a/WebTrivialWiki/app/styles/trivia/chat.css
+++ b/WebTrivialWiki/app/styles/trivia/chat.css
@@ -150,12 +150,26 @@
 }
 
 .trivia-chat {
-    height: 85%;
-    width: 50%;
+    height: 65%;
+    width: 60%;
     margin: 0px auto;
     border-bottom: 1px solid #ccc; 
     padding-left: 5px; 
     padding-top: 5px;
+}
+
+.trivia-chat::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3);
+    background-color: white;
+}
+
+.trivia-chat::-webkit-scrollbar {
+    width: 5px;
+}
+
+.trivia-chat::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+    border-radius: 4px;
 }
 .chat-message {
     max-width: 100%;
