--- a/WebTrivialWiki/app/styles/trivia/generalTrivia.css
+++ b/WebTrivialWiki/app/styles/trivia/generalTrivia.css
@@ -62,6 +62,47 @@
     width: 370px; 
 }
 
-.connectingTable-spinner {
-    
+.triviaTableContainer {
+    position: absolute; 
+    height: 100%; 
+    width: 100%; 
+    background-color: #ededed
+}
+
+.triviaTablePanel {
+    position: relative; 
+    margin-top: 75px; 
+    margin-bottom: 20px; 
+    margin-left: 20px;
+}
+
+.triviaUser-image {
+    max-height: 40px;
+    max-width: 40px;
+    -ms-border-radius: 50%;
+    border-radius: 50%;
+}
+
+
+.newQuestion-progress {
+    position: absolute; 
+    margin-top: 64px; 
+    z-index: 1;
+}
+
+.tableUsers-spinner {   
+    position: absolute;
+     left: 40%; 
+     top: 20px;
+}
+
+
+md-progress-linear.md-default-theme .md-bar, 
+md-progress-linear .md-bar {
+    background-color: #DD425A;
+}
+
+md-progress-linear.md-default-theme .md-container, 
+md-progress-linear .md-container {
+    background-color: #F8C5CD;
 }
