--- a/WebTrivialWiki/app/styles/general.css
+++ b/WebTrivialWiki/app/styles/general.css
@@ -40,6 +40,10 @@
     cursor: default;
 }
 
+.pull-right {
+    float: right;
+}
+
 .no-padding-top {
     padding-top: 0 !important;
 }
@@ -195,4 +199,51 @@
 
 md-input-container:not(.md-input-invalid).md-input-focused .md-input {
     border-color: #ccc;
+}
+
+.gray-container {
+    position: absolute; 
+    height: 100%; 
+    width: 100%; 
+    background-color: #ededed
+}
+
+.gray-color {
+    color: #ccc;
+}
+
+.publicChat-container {
+    margin-top: 75px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    right: 0;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.no-connections-chat {
+    text-align: center; 
+    margin-top: 20px;
+}
+
+.no-connections-message {
+    font-size: 17px; 
+    font-weight: 300; 
+    display: block;
+}
+
+.invite-someone-message {
+    font-size: 13px; 
+    font-weight: 300; 
+    display: block;
+}
+
+.make-friends-button {
+    -ms-border-radius: 0;
+    border-radius: 0; 
+    margin-top: 20px; 
+    height: 40px;
 }
